insert prod btn issue fixed

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -49,6 +49,17 @@
             android:layout_weight="1"
             android:layout_height="wrap_content" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:id="@+id/myprofilelabel"
+            android:text="My Profile"
+            android:padding="7dp"
+            android:textStyle="bold"
+            android:textColor="@color/textTabLight"
+            android:layout_weight="1"
+            android:layout_height="wrap_content" />
+
+
     </LinearLayout>
     <TextView
         android:textSize="10sp"
@@ -69,4 +80,6 @@
         android:layout_height="match_parent">
 
     </androidx.viewpager.widget.ViewPager>
+
+
 </RelativeLayout>
