--- a/app/src/main/res/layout/activity_farmer_home.xml
+++ b/app/src/main/res/layout/activity_farmer_home.xml
@@ -23,7 +23,7 @@
         android:gravity="center"
         android:text="@string/register"
         android:textColor="@android:color/background_dark"
-        android:textSize="50sp"
+        android:textSize="30sp"
 
 
         />
@@ -39,9 +39,8 @@
 
         android:gravity="center"
         android:text="@string/add_product"
-        android:textSize="15sp"
 
-        />
+        android:textSize="15sp" />
 
     <Button
         android:id="@+id/my_product"
