--- a/app/src/main/res/layout/activity_farmer_add_product.xml
+++ b/app/src/main/res/layout/activity_farmer_add_product.xml
@@ -56,7 +56,7 @@
         />
 
     <EditText
-        android:id="@+id/phone"
+        android:id="@+id/product_price"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
@@ -67,7 +67,7 @@
         android:inputType="text" />
 
     <EditText
-        android:id="@+id/address"
+        android:id="@+id/product_quantity"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
@@ -79,10 +79,10 @@
         />
 
     <Button
-        android:id="@+id/btnRegister"
+        android:id="@+id/upload"
         android:gravity="center"
 
-        android:text="@string/submit"
+        android:text="@string/upload"
         android:layout_width="150dp"
         android:layout_height="35dp"
         android:background="@color/blue"
@@ -90,6 +90,12 @@
         android:textSize="15sp"
 
         />
+
+    <Button
+        android:id="@+id/submit"
+        android:layout_width="150dp"
+        android:layout_height="35dp"
+        android:text="@string/submit" />
 
 
 </LinearLayout>
