--- a/app/src/main/res/layout/activity_farmer_my_product.xml
+++ b/app/src/main/res/layout/activity_farmer_my_product.xml
@@ -9,5 +9,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/mRecyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_margin="0dp"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
