--- a/app/src/main/res/layout/farmer_products.xml
+++ b/app/src/main/res/layout/farmer_products.xml
@@ -3,20 +3,22 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
 
     <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_margin="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="105dp"
+        android:layout_margin="0dp"
         app:cardCornerRadius="15dp"
         app:cardElevation="3dp">
 
         <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="0dp"
+            >
 
             <ImageView
                 android:id="@+id/ivPicture"
