--- a/app/src/main/res/layout/farmer_products.xml
+++ b/app/src/main/res/layout/farmer_products.xml
@@ -4,39 +4,54 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:theme="@style/Widget.MaterialComponents.CardView"
+
+    >
 
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="wrap_content"
         android:layout_height="105dp"
-        android:layout_margin="0dp"
-        app:cardCornerRadius="15dp"
-        app:cardElevation="3dp">
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        app:cardBackgroundColor="@color/white"
+android:layout_marginTop="12dp"
+        android:layout_marginBottom="12dp"
+        app:cardMaxElevation="20dp"
+        app:contentPadding="3dp"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="7dp"
+        app:strokeColor="@color/black"
+        app:strokeWidth="2dp"
+        >
 
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="0dp"
-            >
+            android:layout_height="105dp"
+            android:layout_margin="0dp">
 
             <ImageView
                 android:id="@+id/ivPicture"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:background="@drawable/ic_launcher_background" />
+                android:background="@drawable/logo" />
 
             <TextView
                 android:id="@+id/productname"
                 android:layout_width="268dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
+                android:layout_centerHorizontal="true"
+                android:layout_marginLeft="16dp"
                 android:layout_marginTop="5dp"
-                android:layout_marginEnd="33dp"
+                android:layout_marginEnd="17dp"
                 android:layout_toRightOf="@id/ivPicture"
                 android:text="Super Hero Name"
                 android:textSize="28sp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:gravity="center"
+                />
 
             <TextView
                 android:id="@+id/productprice"
@@ -46,12 +61,14 @@
                 android:layout_alignParentEnd="true"
 
                 android:layout_alignParentBottom="true"
-                android:layout_marginStart="7dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginEnd="170dp"
-                android:layout_marginBottom="14dp"
+                android:layout_marginStart="18dp"
+                android:layout_marginTop="14dp"
+                android:layout_marginEnd="159dp"
+                android:layout_marginBottom="16dp"
                 android:layout_toEndOf="@+id/ivPicture"
                 android:text="Rs 20 "
+                android:gravity="center"
+
                 android:textSize="20sp" />
 
             <TextView
@@ -62,15 +79,18 @@
                 android:layout_alignParentEnd="true"
 
                 android:layout_alignParentBottom="true"
-                android:layout_marginStart="168dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginEnd="12dp"
-                android:layout_marginBottom="15dp"
+                android:layout_marginStart="149dp"
+                android:layout_marginTop="14dp"
+                android:layout_marginEnd="31dp"
+                android:layout_marginBottom="16dp"
                 android:layout_toEndOf="@+id/ivPicture"
                 android:text="Q  20kgs "
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:gravity="center"
+
+                />
         </RelativeLayout>
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 
 </LinearLayout>
 
